<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_movie_title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:paddingVertical="15dp"
            android:text="@string/movie_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/tv_movie_poster_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/movie_poster_description"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_movie_title_detail"
        tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#323232"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/tv_plot_synopsis_label"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tv_release_date_detail"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:background="@color/colorAccent"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                 />



            <TextView
                android:id="@+id/tv_vote_average_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:padding="10dp"

                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_plot_synopsis_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/movie_plot"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_poster_detail" />

        <TextView
            android:id="@+id/tv_plot_synopsis_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="10dp"
            android:text="@string/movie_synopsis"
            android:textAlignment="textStart"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis_label" />

        <Button
            android:id="@+id/tv_trailer_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/watch_trailer"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@+id/tv_favourite_toggle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis_detail" />

        <ToggleButton
            android:id="@+id/tv_favourite_toggle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:checked="false"
            android:fadingEdge="horizontal|vertical"
            android:padding="5dp"
            android:text="@string/togglebutton"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textOff="@string/mark_as_favourite"
            android:textOn="@string/favourited"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_synopsis_detail" />

        <TextView
            android:id="@+id/tv_reviews_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/reviews"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer_button" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tv_review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>